mrpt (1:2.1.6-1) unstable; urgency=medium

  * Drop dependencies on binutils-dev to avoid problems (see bug #976803).
  * Fix mrpt uses private shared bfd library (Closes: #976803).
  * Fix building mrpt against OpenCV 4.5.0 (Closes: #977247).
  * New version of upstream sources.

 -- José Luis Blanco Claraco <joseluisblancoc@gmail.com>  Mon, 14 Dec 2020 08:16:47 +0100

mrpt (1:2.1.5-1) unstable; urgency=medium

  * New version of upstream sources.
  * Fix build against newer libjsoncpp (Closes: #976420).
  * Fix AppStream warnings and errors (metainfo files licensed as MIT).

 -- José Luis Blanco Claraco <joseluisblancoc@gmail.com>  Sun, 06 Dec 2020 18:49:18 +0100

mrpt (1:2.1.4-1) unstable; urgency=medium

  * New version of upstream sources.

 -- José Luis Blanco Claraco <joseluisblancoc@gmail.com>  Mon, 09 Nov 2020 06:30:51 +0100

mrpt (1:2.1.3-1) unstable; urgency=medium

  * Moving from libdc1394-22-dev to libdc1394-dev (Closes: #970837).
  * Use system library libsimpleini-dev (Closes: #902488).
  * Fix build in ppc64.
  * New version of upstream sources.

 -- José Luis Blanco Claraco <joseluisblancoc@gmail.com>  Wed, 21 Oct 2020 09:35:46 +0200

mrpt (1:2.1.0-2) unstable; urgency=medium

  * debian/rules: add -g1 to mips builds (Closes: #970818).

 -- José Luis Blanco Claraco <joseluisblancoc@gmail.com>  Sat, 26 Sep 2020 08:10:00 +0200

mrpt (1:2.1.0-1) unstable; urgency=medium

  * New version of upstream sources.
  * Update debian/copyright.

 -- José Luis Blanco Claraco <joseluisblancoc@gmail.com>  Mon, 31 Aug 2020 10:22:44 +0200

mrpt (1:2.0.4-2) unstable; urgency=medium

  * Team upload
  * debian/patches/e84511500276d38d3eeff0b220e8d45e0d74fc93.patch:
    - cherry-pick upstream "fix" for a failing test (Closes: #964044).

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Fri, 17 Jul 2020 08:14:20 +0200

mrpt (1:2.0.4-1) unstable; urgency=medium

  * New version of upstream sources.
  * Fix AppStream metadata hints in package tracker page.
