@@ -3,6 +3,7 @@ mrpt (1:2.1.6-1) unstable; urgency=medium
   * Drop dependencies on binutils-dev to avoid problems (see bug #976803).
   * Fix mrpt uses private shared bfd library (Closes: #976803).
   * Fix building mrpt against OpenCV 4.5.0 (Closes: #977247).
+  * Update debian/rules to ensure proper dh_clean behavior.
   * New version of upstream sources.
 
  -- José Luis Blanco Claraco <joseluisblancoc@gmail.com>  Mon, 14 Dec 2020 08:16:47 +0100
